2010-11-30	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* mpc55xx/edma/edma.c: Use rtems_chain_first() and do not directly
	access the structure.

2010-11-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* mpc55xx/include/irq.h: Include missing <bspopts.h>.  Format.
	* mpc83xx/include/mpc83xx.h, mpc83xx/i2c/mpc83xx_i2cdrv.h,
	mpc83xx/i2c/mpc83xx_i2cdrv.c: Changes to use this driver for the
	MPC55XX familiy.

2010-08-15	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* mpc55xx/esci/esci.c: Add BSP_poll_char.

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* new-exceptions/bspsupport/ppc_exc_hdl.c: Rename
	_Context_Switch_necessary to _Thread_Dispatch_necessary to more
	properly reflect the intent.

2010-06-29	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* new-exceptions/bspsupport/ppc_exc_asm_macros.h: Added include of
	bspopts to resolve compilation problem.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1573/cpukit
	* mpc5xx/irq/irq.c, mpc5xx/irq/irq_asm.S,
	new-exceptions/bspsupport/ppc_exc.S,
	new-exceptions/bspsupport/ppc_exc_asm_macros.h,
	new-exceptions/bspsupport/ppc_exc_hdl.c: Add a per cpu data structure
	which contains the information required by RTEMS for each CPU core.
	This encapsulates information such as thread executing, heir, idle
	and dispatch needed.

2010-06-14	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* Makefile.am: Formatting.

2010-05-24	Peter Dufault <dufault@hda.com>

	PR 1530/bsps
	* mpc55xx/edma/edma.c: Eliminate use of recently removed macros.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* mpc55xx/include/irq.h: Move defines from
	'libbsp/powerpc/mpc55xxevb/include/irq-config.h'.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* mpc5xx/clock/clock.c, mpc5xx/console-generic/console-generic.c,
	mpc5xx/irq/irq_init.c, mpc5xx/timer/timer.c: Remove warnings.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* ppc403/clock/clock.c, ppc403/console/console405.c,